--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sacuanjoche-fronted</title>
+    <title>Florería Sacuanjoche</title>
+    <!-- Preload imagen LCP para mejor rendimiento -->
+    <link rel="preload" as="image" href="/Flor_de_sacuanjoche-.png" />
   </head>
   <body>
     <div id="root"></div>
