--- a/index.html
+++ b/index.html
@@ -1,13 +1,180 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Florería Sacuanjoche</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>Floristería Sacuanjoche - Arreglos Florales de Calidad desde 1983 | Managua, Nicaragua</title>
+  <meta name="title" content="Floristería Sacuanjoche - Arreglos Florales de Calidad desde 1983 | Managua, Nicaragua" />
+  <meta name="description"
+    content="Floristería Sacuanjoche: Creando los ramos florales más bellos, delicados y de calidad del mercado desde 1983. Arreglos florales personalizados, entrega a domicilio y servicio profesional en Managua, Nicaragua." />
+  <meta name="keywords"
+    content="floristería, arreglos florales, ramos de flores, flores Managua, floristería Nicaragua, arreglos florales personalizados, entrega de flores, flores para eventos, ramos de novia, coronas funerarias" />
+  <meta name="author" content="Floristería Sacuanjoche" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="googlebot" content="index, follow" />
+  <meta name="language" content="Spanish" />
+  <meta name="revisit-after" content="7 days" />
+  <meta name="rating" content="general" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://sacuanjoche.netlify.app/" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/Flor_de_sacuanjoche-.png" />
+  <link rel="apple-touch-icon" href="/Flor_de_sacuanjoche-.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/Flor_de_sacuanjoche-.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/Flor_de_sacuanjoche-.png" />
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#50C878" />
+  <meta name="msapplication-TileColor" content="#50C878" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Sacuanjoche" />
+
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://sacuanjoche.netlify.app/" />
+  <meta property="og:title" content="Floristería Sacuanjoche - Arreglos Florales de Calidad desde 1983" />
+  <meta property="og:description"
+    content="Creando los ramos florales más bellos, delicados y de calidad del mercado desde 1983. Arreglos florales personalizados, entrega a domicilio y servicio profesional en Managua, Nicaragua." />
+  <meta property="og:image" content="https://sacuanjoche.netlify.app/Flor_de_sacuanjoche-.png" />
+  <meta property="og:image:secure_url" content="https://sacuanjoche.netlify.app/Flor_de_sacuanjoche-.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="1200" />
+  <meta property="og:image:alt" content="Floristería Sacuanjoche - Arreglos Florales" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:site_name" content="Floristería Sacuanjoche" />
+  <meta property="og:locale" content="es_ES" />
+  <meta property="og:locale:alternate" content="es_NI" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://sacuanjoche.netlify.app/" />
+  <meta name="twitter:title" content="Floristería Sacuanjoche - Arreglos Florales de Calidad desde 1983" />
+  <meta name="twitter:description"
+    content="Creando los ramos florales más bellos, delicados y de calidad del mercado desde 1983. Arreglos florales personalizados y entrega a domicilio." />
+  <meta name="twitter:image" content="https://sacuanjoche.netlify.app/Flor_de_sacuanjoche-.png" />
+  <meta name="twitter:image:alt" content="Floristería Sacuanjoche - Arreglos Florales" />
+  <meta name="twitter:creator" content="@Sacuanjoche" />
+  <meta name="twitter:site" content="@Sacuanjoche" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Florist",
+      "name": "Floristería Sacuanjoche",
+      "description": "Creando los ramos florales más bellos, delicados y de calidad del mercado desde 1983. Arreglos florales personalizados, entrega a domicilio y servicio profesional.",
+      "url": "https://sacuanjoche.netlify.app",
+      "logo": "https://sacuanjoche.netlify.app/Flor_de_sacuanjoche-.png",
+      "image": "https://sacuanjoche.netlify.app/Flor_de_sacuanjoche-.png",
+      "telephone": "+505-XXXX-XXXX",
+      "priceRange": "$$",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "NI",
+        "addressLocality": "Managua",
+        "addressRegion": "Managua"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "",
+        "longitude": ""
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday"
+        ],
+        "opens": "08:00",
+        "closes": "18:00"
+      },
+      "serviceArea": {
+        "@type": "City",
+        "name": "Managua"
+      },
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Arreglos Florales",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Ramos de Flores",
+              "description": "Ramos florales personalizados y de calidad"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Arreglos Florales para Eventos",
+              "description": "Arreglos florales para bodas, cumpleaños y eventos especiales"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Entrega a Domicilio",
+              "description": "Servicio de entrega de arreglos florales a domicilio"
+            }
+          }
+        ]
+      },
+      "foundingDate": "1983",
+      "sameAs": []
+    }
+  </script>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Floristería Sacuanjoche",
+      "url": "https://sacuanjoche.netlify.app",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://sacuanjoche.netlify.app/catalogo?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+  </script>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Floristería Sacuanjoche",
+      "url": "https://sacuanjoche.netlify.app",
+      "logo": "https://sacuanjoche.netlify.app/Flor_de_sacuanjoche-.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "customer service",
+        "areaServed": "NI",
+        "availableLanguage": "Spanish"
+      }
+    }
+  </script>
+
+  <!-- Preload critical resources -->
+  <link rel="preload" href="/Flor_de_sacuanjoche-.png" as="image" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
