--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   </script>
 
   <!-- Preload critical resources -->
-  <link rel="preload" href="/Flor_de_sacuanjoche-.png" as="image" />
+  <!-- Removed: Image preload not used immediately, causing console warnings -->
 </head>
 
 <body>
